--- a/index.html
+++ b/index.html
@@ -1,18 +1,49 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  
   </head>
   <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-    <script src="cenario.js"></script>
-    <script src="interactable.js"></script>
-    <script src="player.js"></script>
-    <script src="button.js"></script>
-  
+    <section class="start">
+      <div>
 
-</body></html>
+        <div class="logo">
+          <img src="img/logo.png" alt="">
+        </div>
+  
+        <div class="row-btn">
+          <a href="game.html" class="btn-start">
+            <img src="img/start.png" alt="">
+          </a>
+        </div>
+
+      </div>  
+    </section>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+  </body>
+</html>
