--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Adote o pockets</h5>
             <button type="button" class="close" id="close" data-dismiss="modal" aria-label="Close">
-              <img src="img/fechar.png" alt="">
+              <img src="assets/fechar.png" alt="">
             </button>
           </div>
           <div class="modal-body">
