--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <div>
 
         <div class="logo">
-          <img src="img/logo.png" alt="">
+          <img src="assets/logo.png" alt="">
         </div>
   
         <div class="row-btn">
           <a href="game.html" class="btn-start">
-            <img src="img/start.png" alt="">
+            <img src="assets/start.png" alt="">
           </a>
         </div>
 
