--- a/game.html
+++ b/game.html
@@ -16,13 +16,14 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Adote o pockets</h5>
+            <h5 class="modal-title" id="modal-title"></h5>
             <button type="button" class="close" id="close" data-dismiss="modal" aria-label="Close">
               <img src="assets/fechar.png" alt="">
             </button>
           </div>
-          <div class="modal-body">
-            Conheça o Adote o Pockets! Esse é o nosso fundo de investimento onde você pode contribuir com seu tesouro para a expansão do Reino de Deus nas universidades. 
+          <div class="modal-body" id="modal-body">
+            <div class="texto-modal" id="texto-modal"></div>
+            <a class="link-modal" id="link-modal" href="#"></a>
           </div>
           
         </div>
