--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
           </div>
           <div class="modal-body" id="modal-body">
             <div class="texto-modal" id="texto-modal"></div>
-            <a class="link-modal" id="link-modal" href="#"></a>
+            <a class="link-modal" target="_blank" id="link-modal" href="#"></a>
           </div>
           
         </div>
