--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo">
           <img src="assets/logo.png" alt="">
         </div>
-  
+  d,a edln
         <div class="row-btn">
           <a href="game.html" class="btn-start">
             <img src="assets/start.png" alt="">
